--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "async": "^2.6.2",
     "simple-git": "^1.107.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "jest": "^24.5.0",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
