--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/jest": "^24.0.11",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "typescript": "^3.3.3333"
   },
   "scripts": {
