--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typescript": "^3.3.3333"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start-server": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
