--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "simple-git": "^1.107.0"
   },
   "devDependencies": {
+    "@types/esprima": "^4.0.2",
     "@types/jest": "^24.0.11",
+    "cors": "^2.8.5",
+    "esprima": "^4.0.1",
+    "express": "^4.16.4",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
     "typescript": "^3.3.3333"
   },
   "scripts": {
     "test": "jest",
+    "clean-tests": "jest --clearCache",
     "start-server": "node ./server/server.js"
   },
   "repository": {
