--- a/viewer/angular.json
+++ b/viewer/angular.json
@@ -47,6 +47,7 @@
             ],
             "styles": [
               "node_modules/devextreme/dist/css/dx.common.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/themes/generated/theme.base.css",
               "src/themes/generated/theme.additional.css",
               "src/dx-styles.scss",
