--- a/viewer/package.json
+++ b/viewer/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "core-js": "^2.5.4",
     "devextreme": "18.2",
     "devextreme-angular": "18.2",
