--- a/viewer/tsconfig.json
+++ b/viewer/tsconfig.json
@@ -8,6 +8,8 @@
     "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true  ,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
